# linear-feedback-controller

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  controller_plugins.xml  default.nix  flake.nix  package.xml  result
.github/workflows/: ci_ros2.yml  deps.repos  dummy_action.yml  nix.yml  release.yml  update-flake-lock.yml
cmake/: sec_generate_parameter_library.cmake
config/: talos_linear_feedback_controller_params.yaml  tiago_pro_lfc_params.yaml
deprecated/: linear_feedback_controller.cpp  linear_feedback_controller.hpp  ros_gtest_main.cpp  test_linear_feedback_controller_basic.test
deprecated/ros-wbmpc/: CMakeLists.txt
deprecated/ros-wbmpc-interface/: README.md
deprecated/ros-wbmpc/include/ros-wbmpc/: wbmpc.hpp
deprecated/ros-wbmpc/tests/: ros_gtest_main.cpp  test_wbmpc_basic.cpp
include/joint_state_estimator/: joint_state_estimator.hpp
include/linear_feedback_controller/: averaging_filter.hpp  averaging_filter.hxx  contact_detector.hpp  controller.hpp  handle_ros_versions.hpp  joint_state_estimator.hpp  lf_controller.hpp  lfc.hpp  linear_feedback_controller.hpp  linear_feedback_controller_ros.hpp  min_jerk.hpp  passthrough_controller.hpp  pd_controller.hpp  robot_model_builder.hpp  time.hpp  visibility.hpp  visibitlity_control.hpp
launch/: talos_linear_feedback_controller.launch  talos_params.launch
linear-feedback-controller/: pd_plus_demo.py
linear_feedback_controller/: CMakeLists copy.txt  CMakeLists.txt  README.md  controller_plugins.xml  package.xml  pd_plus_demo.py
linear_feedback_controller/config/: controller_linear_feedback.yaml  rosconsole.conf  talos_linear_feedback_controller_params.yaml
linear_feedback_controller/include/linear_feedback_controller/: averaging_filter.hpp  averaging_filter.hxx  contact_detector.hpp  linear_feedback_controller.hpp  min_jerk.hpp
linear_feedback_controller/include/linear_feedback_controller/deprecated/: model_utils.h  yaml.hpp
linear_feedback_controller/launch/: talos_linear_feedback_controller.launch  talos_params.launch
linear_feedback_controller/src/: averaging_filter.cpp  contact_detector.cpp  linear_feedback_controller.cpp  min_jerk.cpp  pd_controller.py  plugins.cpp
linear_feedback_controller/tests/: ros_gtest_main.cpp  rosconsole.conf  test_averaging_filter.cpp  test_linear_feedback_controller.py  test_linear_feedback_controller.test  test_linear_feedback_controller_basic.cpp  test_linear_feedback_controller_basic.test  test_linear_feedback_controller_basic_gdb.test  test_linear_feedback_controller_basic_valgrind.test  test_min_jerk.cpp
linear_feedback_controller_msgs/: CMakeLists.txt  README.md  package.xml
linear_feedback_controller_msgs/include/linear_feedback_controller_msgs/: eigen_conversions.hpp
linear_feedback_controller_msgs/msg/: Contact.msg  Control.msg  Sensor.msg
linear_feedback_controller_msgs/tests/: gtest_main.cpp  test_eigen_conversions.cpp
ros-wbmpc/: CMakeLists.txt  README.md  package.xml
ros-wbmpc-msgs/: CMakeLists.txt  package.xml
ros-wbmpc-msgs/msg/: ContactSensor.msg  ControlData.msg  SensorData.msg
ros-wbmpc/include/: foot_trajectory.h
ros-wbmpc/include/ros-wbmpc/: wbmpc.hpp  yaml.hpp
ros-wbmpc/src/: foot_trajectory.cpp  model-utils.cpp  wbmpc.cpp
ros-wbmpc/tests/: test_wbmpc_basic.launch
ros_server_wbmpc/: README.md
ros_server_wbmpc_msgs/: README.md
ros_wbmpc_msgs/: CMakeLists.txt  package.xml
ros_wbmpc_msgs/include/ros_wbmpc_msgs/: eigen_conversions.hpp
ros_wbmpc_msgs/msg/: Control.msg  Sensor.msg
roscontrol_linear_feedback/: CMakeLists.txt  package.xml
roscontrol_linear_feedback/include/roscontrol_linear_feedback/: linear_feeedback_controller.hpp
roscontrol_linear_feedback/src/: linear_feedback_controller.cpp
roscontrol_pal_wbmpc/: CMakeLists.txt  README.md
roscontrol_pal_wbmpc/config/: controller_wbmpc.yaml
roscontrol_pal_wbmpc/include/roscontrol_pal_wbmpc/: controller_wbmpc.hpp
roscontrol_pal_wbmpc/src/: controller_wbmpc.cpp
src/: contact_detector.cpp  controller.cpp  joint_state_estimator.cpp  joint_state_estimator.yaml  lf_controller.cpp  lfc.cpp  linear_feedback_controller.cpp  linear_feedback_controller.yaml  linear_feedback_controller_ros.cpp  min_jerk.cpp  min_jerk.wxmx  passthrough_controller.cpp  passthrough_controller.yaml  pd_controller.cpp  pd_controller.py  robot_model_builder.cpp
src/joint_state_estimator/: joint_state_estimator.cpp  joint_state_estimator.yaml
tests/: Utils.hpp  pd_plus_controller.py  pd_plus_controller.yaml  test_averaging_filter.cpp  test_lf_controller.cpp  test_linear_feedback_controller.cpp  test_linear_feedback_controller.py  test_min_jerk.cpp  test_pd_controller.cpp  test_robot_model_builder.cpp
tests/Utils/: Core.hpp  Mutation.hpp  PdController.hpp
tests/utils/: array.hpp  core.hpp  eigen.hpp  eigen_conversions.hpp  file.hpp  file_operation.hpp  lf_controller.hpp  linear_feedback_controller.hpp  mock_robot_model_builder.hpp  mock_robot_model_builder_smart.hpp  mutation.hpp  pd_controller.hpp  print_to.hpp  robot_model.hpp  view.hpp
