<?xml version="1.0"?>
<package format="3">
  <name>linear_feedback_controller</name>
  <version>1.0.2</version>
  <description>
    roscontrol controller package conputing a linear feedback. The user needs
    to provide a model of the robot and a list of controlled joint and the
    controller computes a linear feedback on the user defined state.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Maximilien Naveau</author>

  <license>BSD-2</license>
  <url>https://github.com/loco-3d/linear_feedback_controller</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>


  <build_depend>eigen</build_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecyle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>pinocchio</depend>
  <depend>linear_feedback_controller_msgs</depend>

  <test_depend>example-robot-data</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>
