<?xml version="1.0"?>
<package format="3">
  <name>linear_feedback_controller</name>
  <version>2.0.0</version>
  <description>
    roscontrol controller package conputing a linear feedback. The user needs
    to provide a model of the robot and a list of controlled joint and the
    controller computes a linear feedback on the user defined state.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Maximilien Naveau</author>

  <license>BSD-2</license>
  <url>https://github.com/loco-3d/linear_feedback_controller</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>fmt</build_depend>
  <build_depend>parameter_traits</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>control_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>pinocchio</depend>
  <depend>linear_feedback_controller_msgs</depend>
  <depend>pal_statistics</depend>
  <depend>generate_parameter_library</depend>
  <depend condition="$ROS_DISTRO != humble">rosidl_dynamic_typesupport</depend>

  <test_depend>example-robot-data</test_depend>
  <test_depend>gtest_vendor</test_depend>
  <test_depend>gmock_vendor</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
