<package format="2">
  <name>linear_feedback_controller</name>
  <version>0.0.0</version>
  <description>
    roscontrol controller package conputing a linear feedback. The user needs
    to provide a model of the robot and a list of controlled joint and the
    controller computes a linear feedback on the user defined state.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Maximilien Naveau</author>

  <license>BSD</license>
  <url>https://github.com/loco-3d/ros-wbmpc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pinocchio</depend>
  <depend>realtime_tools</depend>
  <depend>linear_feedback_controller_msgs</depend>
  <depend>pal_base_ros_controller</depend>
  <depend>pluginlib</depend>

  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>