<?xml version="1.0"?>
<package format="2">
  <name>linear_feedback_controller</name>
  <version>0.1.0</version>
  <description>
    roscontrol controller package conputing a linear feedback. The user needs
    to provide a model of the robot and a list of controlled joint and the
    controller computes a linear feedback on the user defined state.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Maximilien Naveau</author>

  <license>BSD-2</license>
  <url>https://github.com/loco-3d/linear_feedback_controller</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pinocchio</depend>
  <depend>realtime_tools</depend>
  <depend>example-robot-data</depend>
  <depend>linear_feedback_controller_msgs</depend>
  <depend>pal_base_ros_controller</depend>

  <!-- Need to depend directly on the package containing the base type of the controller for the plugin to work -->
  <depend>controller_interface</depend>

  <!-- Create the plugin -->
  <depend>pluginlib</depend>

  <exec_depend>python-rospkg</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>
